Fix the alignment of text in infopage

--- a/frontend/src/components/Infopage.css
+++ b/frontend/src/components/Infopage.css
@@ -215,7 +215,7 @@ top:20px;
 .display_inline{
   text-align: center;
   position: relative;
-  top: 150px;
+  top: 100px;
   margin: 20px;
   display: block;
 }
